--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ article p:first-of-type:first-letter{
 	float: left;
 	font-size: 50pt;
 	line-height: 1;
-	margin: 5px; 0 0 0;
+	margin: 5px 5px 0 0;
 
 }
 
