--- a/style.css
+++ b/style.css
@@ -118,11 +118,11 @@ article p:first-of-type:first-letter{
 	font-size: 50pt;
 	line-height: 1;
 	margin: 5px 5px 0 0;
-
+  font-family: 'Times New Roman', Times, serif;
 }
 
-main > article img {
- display: flex;
+main article img {
+  float: left;
   width: 300px;
   height: auto;
   margin-right: 24px;
